Add link from email domain error to contact.

--- a/languages/he/error.json
+++ b/languages/he/error.json
@@ -12,7 +12,7 @@
     "invalid-date": "יש לציין תאריך תקין",
     "invalid-username": "שם משתמש שגוי",
     "invalid-email": "אימייל שגוי",
-    "invalid-email-domain": "לא הצלחנו לשייך את כתובת המייל שהוכנסה לחברה כלשהי. אנא וודא כי הכנסת את כתובת המייל של מקום העבודה ולא את המייל הפרטי. אם הכנסת את המייל של מקום העבודה, ייתכן שהחברה שבה אתה עובד עדיין אינה ברשימת החברות המוכרות.",
+    "invalid-email-domain": "לא הצלחנו לשייך את כתובת המייל שהוכנסה לחברה כלשהי. אנא וודא כי הכנסת את כתובת המייל של מקום העבודה ולא את המייל הפרטי. אם הכנסת את המייל של מקום העבודה, ייתכן שהחברה שבה אתה עובד עדיין אינה ברשימת החברות המוכרות. אנא <a href=/contact>צור קשר</a> על מנת שנוכל להוסיפה לרשימה.",
     "invalid-fullname": "שם מלא לא תקין",
     "invalid-location": "מקום לא תקין",
     "invalid-birthday": "יום הולדת לא תקין",
